[xh] update from Pootle (firefox)

--- a/xh/browser/chrome/browser/browser.properties
+++ b/xh/browser/chrome/browser/browser.properties
@@ -12,14 +12,14 @@ droponhomemsg=Ingaba ufuna olu xwebhu lube liphepha lakho elitsha lasekhaya?
 
 # LOCALIZATION NOTE (contextMenuSearch): %1$S is the search engine,
 # %2$S is the selection string.
-contextMenuSearch=Khangela i-%1$S ye- "%2$S"
+contextMenuSearch=Khangela %1$S ye- "%2$S"
 contextMenuSearch.accesskey=S
 
 # bookmark dialog strings
 
 bookmarkAllTabsDefault=[Igama lefolda]
 
-xpinstallPromptWarning=I%S iyithintele le sayithi (%S) ekukuceleni ukuba ufakele isoftwe kwikhompyutha.
+xpinstallPromptWarning=%S iyithintele le sayithi (%S) ekukuceleni ukuba ufakele isoftwe kwikhompyutha.
 xpinstallPromptAllowButton=Vumela
 # Accessibility Note:
 # Be sure you do not choose an accesskey that is used elsewhere in the active context (e.g. main menu bar, submenu of the warning popup button)
@@ -87,7 +87,7 @@ lwthemeNeedsRestart.accesskey=R
 # LOCALIZATION NOTE (popupWarning.message): Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is brandShortName and #2 is the number of pop-ups blocked.
-popupWarning.message=I-#1 ithintele le sayithi ekuvuleni iwindow ezivelelayo.;#1 ithintele le sayithi okuvuleni #2 iiwindo ezongezelelekileyo.
+popupWarning.message=#1 ithintele le sayithi ekuvuleni iwindow ezivelelayo.;#1 ithintele le sayithi okuvuleni #2 iiwindo ezongezelelekileyo.
 popupWarningButton=Iindlela zokhetho
 popupWarningButton.accesskey=O
 popupWarningButtonUnix=Izikhethwa
@@ -96,7 +96,7 @@ popupAllow=Vumela okuzivelelayo kwe-%S
 popupBlock=Vumela okuzivelelayo kwe-%S
 popupWarningDontShowFromMessage=Musa ukubonisa lo myalezo xa kunqandiwe okuzivelelayo
 popupWarningDontShowFromLocationbar=Musa ukubonisa inkcukacha yebha xa kunqandiwe okuzivelelayo
-popupShowPopupPrefix=Bonisa i-'%S'
+popupShowPopupPrefix=Bonisa '%S'
 
 # Bad Content Blocker Doorhanger Notification
 # %S is brandShortName
@@ -125,28 +125,28 @@ keywordURIFixup.dismiss.accesskey=N
 # LOCALIZATION NOTE (pluginActivateNew.message): Used for newly-installed
 # plugins which are not known to be unsafe. %1$S is the plugin name and %2$S
 # is the site domain.
-pluginActivateNew.message=Vumela i-%2$S ukuba iqhube i-"%1$S"?
-pluginActivateMultiple.message=Sivumele i-%S iqhube izifakelo?
+pluginActivateNew.message=Vumela %2$S ukuba iqhube "%1$S"?
+pluginActivateMultiple.message=Sivumele %S iqhube izifakelo?
 pluginActivate.learnMore=Funda ngaphezulu…
 # LOCALIZATION NOTE (pluginActivateOutdated.message, pluginActivateOutdated.label):
 # These strings are used when an unsafe plugin has an update available.
 # %1$S is the plugin name, %2$S is the domain, and %3$S is brandShortName.
-pluginActivateOutdated.message=i-%3$S ithintele isifakelo esiphelelweyo se-"%1$S" ekubeni siqhubeke kwi-%2$S.
+pluginActivateOutdated.message=%3$S ithintele isifakelo esiphelelweyo se-"%1$S" ekubeni siqhubeke kwi-%2$S.
 pluginActivateOutdated.label=Isifakelo esiphelelweyo
 pluginActivate.updateLabel=Sihlaziye ngoku…
 # LOCALIZATION NOTE (pluginActivateVulnerable.message, pluginActivateVulnerable.label):
 # These strings are used when an unsafe plugin has no update available.
 # %1$S is the plugin name, %2$S is the domain, and %3$S is brandShortName.
-pluginActivateVulnerable.message=i-%3$S ithintele isongezelelo esingakhuselekanga se-"%1$S" ekubeni siqhube kwi-%2$S.
+pluginActivateVulnerable.message=%3$S ithintele isongezelelo esingakhuselekanga se-"%1$S" ekubeni siqhube kwi-%2$S.
 pluginActivateVulnerable.label=Isongezelelo esisengozini!
 pluginActivate.riskLabel=Ingozi iphi?
 # LOCALIZATION NOTE (pluginActivateBlocked.message): %1$S is the plugin name, %2$S is brandShortName
-pluginActivateBlocked.message=i-%2$S ivalele i-"%1$S" ukukukhusela.
+pluginActivateBlocked.message=%2$S ivalele "%1$S" ukukukhusela.
 pluginActivateBlocked.label=Ivalelwe ukuze ukhuseleke
-pluginActivateDisabled.message=I-"%S" ivaliwe ukuba ingasebenzi.
+pluginActivateDisabled.message="%S" ivaliwe ukuba ingasebenzi.
 pluginActivateDisabled.label=Kwaphulwe isakhono
 pluginActivateDisabled.manage=Lawula izifakelo…
-pluginEnabled.message=I-"%S" ivaliwe ukuba ingasebenzi %S.
+pluginEnabled.message="%S" ivaliwe ukuba ingasebenzi %S.
 pluginEnabledOutdated.message=Isongezelelo esiphelelweyo se-"%S" sivuliwe ukuba sisebenze kwi-%S.
 pluginEnabledVulnerable.message=Isongezelelo esingakhuselekanga se-"%S" sivuliwe ukuba sisebenze kwi-%S.
 pluginInfo.unknownPlugin=Akwaziwa
@@ -217,10 +217,10 @@ menuRestoreAllTabs.label=Buyisela zonke iithebhu
 menuRestoreAllTabsSubview.label=Buyisela iithebhu ezivaliweyo
 # LOCALIZATION NOTE (menuRestoreAllWindows, menuUndoCloseWindowLabel, menuUndoCloseWindowSingleTabLabel):
 # see bug 394759
-menuRestoreAllWindows.label=Buyisela zonke i-Windows
+menuRestoreAllWindows.label=Buyisela zonke iifestile
 # LOCALIZATION NOTE (menuRestoreAllWindowsSubview.label): like menuRestoreAllWindows.label,
 # but used in the history subview in the panel UI, so needs to mention these are *closed* windows.
-menuRestoreAllWindowsSubview.label=Buyisela i-Windows ezivaliweyo
+menuRestoreAllWindowsSubview.label=Buyisela iifestile ezivaliweyo
 # LOCALIZATION NOTE (menuUndoCloseWindowLabel): Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 Window Title, #2 Number of tabs
@@ -439,7 +439,7 @@ dataReportingNotification.button.accessKey  = K
 webapps.install = Fakela
 webapps.install.accesskey = I
 #LOCALIZATION NOTE (webapps.requestInstall) %1$S is the web app name, %2$S is the site from which the web app is installed
-webapps.requestInstall = Ufuna ukufakela i"%1$S" esuka kule sayithi (%2$S)?
+webapps.requestInstall = Ufuna ukufakela "%1$S" esuka kule sayithi (%2$S)?
 webapps.install.success = Iaplikheyishini ifakelwe
 webapps.install.inprogress = Ufakelo lusaqhuba
 webapps.uninstall = Susa okuhlohliweyo
@@ -450,7 +450,7 @@ webapps.doNotUninstall.accesskey = D
 webapps.requestUninstall = Ingaba ufuna ukungafakeli "%1$S"?
 
 # LOCALIZATION NOTE (fullscreen.entered): displayed when we enter HTML5 fullscreen mode, %S is the domain name of the focused website (e.g. mozilla.com).
-fullscreen.entered=I-%S ngoku ikwisikrini esipheleleyo.
+fullscreen.entered=%S ngoku ikwisikrini esipheleleyo.
 # LOCALIZATION NOTE (fullscreen.rememberDecision): displayed when we enter HTML5 fullscreen mode, %S is the domain name of the focused website (e.g. mozilla.com).
 fullscreen.rememberDecision=Khumbula isigqibo se-%S
 
@@ -471,14 +471,14 @@ social.markpageMenu.label=Gcina Iphepha kwi-%S
 social.marklinkMenu.label=Gcina Ikhonkco kwi-%S
 
 # LOCALIZATION NOTE (social.error.message): %1$S is brandShortName (e.g. Firefox), %2$S is the name of the social provider
-social.error.message=I-%1$S ayikwazi ukunxibelelana ne%2$S ngoku.
-social.error.tryAgain.label=I-Zama kwakhona
+social.error.message=%1$S ayikwazi ukunxibelelana ne%2$S ngoku.
+social.error.tryAgain.label=Zama kwakhona
 social.error.tryAgain.accesskey=Z
-social.error.closeSidebar.label=I-Vala le bha yasecaleni
+social.error.closeSidebar.label=Vala le bha yasecaleni
 social.error.closeSidebar.accesskey=V
 
 # LOCALIZATION NOTE: %1$S is the label for the toolbar button, %2$S is the associated badge numbering that the social provider may provide.
-social.aria.toolbarButtonBadgeText=I-%1$S (%2$S)
+social.aria.toolbarButtonBadgeText=%1$S (%2$S)
 
 # Identity notifications popups
 identity.termsOfService = Imiqathango yenkonzo
@@ -495,7 +495,7 @@ identity.next.label = Okulandelayo
 identity.next.accessKey = O
 # LOCALIZATION NOTE: shown in the popup notification when a user successfully logs into a website
 # LOCALIZATION NOTE (identity.loggedIn.description): %S is the user's identity (e.g. user@example.com)
-identity.loggedIn.description = Ngena njenge%S
+identity.loggedIn.description = Ngena njenge: %S
 identity.loggedIn.signOut.label = Phuma
 identity.loggedIn.signOut.accessKey = m
 
