--- a/xh/browser/chrome/browser/devtools/app-manager.properties
+++ b/xh/browser/chrome/browser/devtools/app-manager.properties
@@ -39,5 +39,5 @@ validator.nonAbsoluteLaunchPath=Ukuqalisa indlela kufuneka kube yindlela ephelel
 validator.accessFailedLaunchPath=Ayikwazi ukufikelela kuxwebhu oluqalisa i-app '%S'
 # LOCALIZATION NOTE (validator.accessFailedLaunchPathBadHttpCode): %1$S is the URI of
 # the launch document, %2$S is the http error code.
-validator.accessFailedLaunchPathBadHttpCode=Ayikwazi ukufikelela kuxwebhu lokuqalisa i-app '%1$S', ifumene ikhowudi ye-HTTP %2
+validator.accessFailedLaunchPathBadHttpCode=Ayikwazi ukufikelela kuxwebhu lokuqalisa i-app '%1$S', ifumene ikhowudi ye-HTTP %2$S
 
