--- a/xh/browser/chrome/browser/feeds/subscribe.properties
+++ b/xh/browser/chrome/browser/feeds/subscribe.properties
@@ -11,7 +11,7 @@ liveBookmarks=Izalathisi eziphawulayo eziphilayo
 subscribeNow=Bhalisa Ngoku
 chooseApplicationMenuItem=Khetha i-Aplikheshini…
 chooseApplicationDialogTitle=Khetha i-Aplikheshini
-alwaysUse=Soloko usebenzisa i-%S ukubhalisa kwiifido
+alwaysUse=Soloko usebenzisa %S ukubhalisa kwiifido
 mediaLabel=Iifayile zemidiya
 
 # LOCALIZATION NOTE: The next string is for the size of the enclosed media.
