--- a/xh/browser/chrome/browser/pageInfo.properties
+++ b/xh/browser/chrome/browser/pageInfo.properties
@@ -30,7 +30,7 @@ mediaBlockImage=Nqanda Imifuziselo ukusuka kwi-%S
 mediaUnknownNotCached=Ayaziwa (ayikho kuvimba)
 mediaImageType=%S Umfuziselo
 mediaAnimatedImageType=%S Imifuziselo (ehonjisiweyo, %S iifreyim)
-mediaDimensions=I-%Spx × %Spx
+mediaDimensions=%Spx × %Spx
 mediaDimensionsScaled=%Spx × %Spx (iskeyilwe yaya ku- %Spx × %Spx)
 
 generalQuirksMode=Imo yobuqhinga
