--- a/xh/dom/chrome/dom/dom.properties
+++ b/xh/dom/chrome/dom/dom.properties
@@ -121,21 +121,21 @@ MutationEventWarning=Ukusetyenziswa kwemiCimbi ye-Mutation akwamkelwa. Sebenzisa
 # LOCALIZATION NOTE: Do not translate "Components"
 ComponentsWarning=Izinto zeKhomponenti azamkelwanga. Ziza kushenxiswa kungekudala.
 PluginHangUITitle=Isilumkiso: Isifakelo esingasabeliyo
-PluginHangUIMessage=I-%S isenokuba ixaxekile, okanye isenokuba iyekile ukusabela. Ungasiyekisa isifakelo ngoku, okanye ungaqhubeka ukuze ubone ukuba isifakelo siza kugqiba na.
+PluginHangUIMessage=%S isenokuba ixaxekile, okanye isenokuba iyekile ukusabela. Ungasiyekisa isifakelo ngoku, okanye ungaqhubeka ukuze ubone ukuba isifakelo siza kugqiba na.
 PluginHangUIWaitButton=Qhuba
 PluginHangUIStopButton=Yekisa isifakelo
 # LOCALIZATION NOTE: Do not translate "mozHidden", "mozVisibilityState", "hidden", or "visibilityState"
-PrefixedVisibilityApiWarning=I-'mozHidden' ne-'mozVisibilityState' azamkelwanga.  Sicela usebenzise i-'visibilityState' e-'hidden'n engenasima-phambili endaweni yayo.
+PrefixedVisibilityApiWarning='mozHidden' ne-'mozVisibilityState' azamkelwanga.  Sicela usebenzise i-'visibilityState' e-'hidden'n engenasima-phambili endaweni yayo.
 # LOCALIZATION NOTE: Do not translate "NodeIterator" or "detach()".
 NodeIteratorDetachWarning=Ukutsalela i-detach() kwi-NodeIterator akusasebenzi.
 # LOCALIZATION NOTE: Do not translate "LenientThis" and "this"
-LenientThisWarning=Ukungahoyi iseti yepropati ene-[LenientThis] ngenxa yokuba i-"this" ayichananga.
+LenientThisWarning=Ukungahoyi iseti yepropati ene-[LenientThis] ngenxa yokuba "this" ayichananga.
 # LOCALIZATION NOTE: Do not translate "nsIDOMWindowUtils", "getWindowWithOuterId", or "nsIWindowMediator"
 GetWindowWithOuterIdWarning=Ukusetyenziswa kwe-nsIDOMWindowUtils.getOuterWindowWithId() akwamkelwanga.  Endaweni yayo, sebenzisa indlela ye-nsIWindowMediator ekwanegama elifanayo neli.
 # LOCALIZATION NOTE: Do not translate "getPreventDefault" or "defaultPrevented".
 GetPreventDefaultWarning=Ukusetyenziswa kwe-getPreventDefault() akwamkelwanga.  Sebenzisa i-defaultPrevented endaweni yayo.
 # LOCALIZATION NOTE: Do not translate "getUserData", "setUserData", "WeakMap", or "element.dataset".
-GetSetUserDataWarning=Ukusetyenziswa kwe-getUserData() okanye i-setUserData() akwamkelwanga.  Sebenzisa i-WeakMap okanye i-element.dataset endaweni yayo.
+GetSetUserDataWarning=Ukusetyenziswa kwe-getUserData() okanye setUserData() akwamkelwanga.  Sebenzisa WeakMap okanye i-element.dataset endaweni yayo.
 # LOCALIZATION NOTE: Do not translate "mozGetAsFile" or "toBlob"
 MozGetAsFileWarning=Inkqubo engaqhelekanga ye-mozGetAsFile ayamkelwanga yaye iza kushenxiswa kungekudala.  Sebenzisa inkqubo eqhelekileyo ye-toBlob endaweni yayo.
 # LOCALIZATION NOTE: Do not translate "captureEvents()" or "addEventListener()"
@@ -143,13 +143,13 @@ UseOfCaptureEventsWarning=Ukusetyenziswa kwe-captureEvents() akwamkelwanga. Ukuz
 # LOCALIZATION NOTE: Do not translate "releaseEvents()" or "removeEventListener()"
 UseOfReleaseEventsWarning=Ukusetyenziswa kwe-releaseEvents() akwamkelekanga. Ukuze uphucule ikhowudi yakho, sebenzisa inkqubo ye-DOM 2 removeEventListener(). Ukuze ufumane inkcazelo engakumbi http://developer.mozilla.org/en/docs/DOM:element.removeEventListener
 # LOCALIZATION NOTE: Do not translate "document.load()" or "XMLHttpRequest"
-UseOfDOM3LoadMethodWarning=Ukusetyenziswa kwe-document.load() akwamkelwanga. Ukuze uphucule ikhowudi yakho, sebenzisa i-DOM XMLHttpRequest. Ukuze ufumane uncedo olungakumbi https://developer.mozilla.org/en/XMLHttpRequest
+UseOfDOM3LoadMethodWarning=Ukusetyenziswa kwe-document.load() akwamkelwanga. Ukuze uphucule ikhowudi yakho, sebenzisa DOM XMLHttpRequest. Ukuze ufumane uncedo olungakumbi https://developer.mozilla.org/en/XMLHttpRequest
 # LOCALIZATION NOTE: Do not translate "window.showModalDialog()" or "window.open()" 
 ShowModalDialogWarning=Ukusetyenziswa kwe-window.showModalDialog() akwamkelwanga. Sebenzisa i-window.open() endaweni yayo. Ukuze ufumane uncedo olungakumbi https://developer.mozilla.org/en-US/docs/Web/API/Window.open
 # LOCALIZATION NOTE: Do not translate "window._content" or "window.content"
 Window_ContentWarning=window._content kwaliwe.  Sicela usebenzise window.content endaweni yoko.
 # LOCALIZATION NOTE: Do not translate "XMLHttpRequest"
-SyncXMLHttpRequestWarning=I-XMLHttpRequest eyenzeka ngexesha elinye kumsonto ophambili yaliwe ngenxa yobungozi bayo kumsebenzi womsebenzisi. Ukufumana uncedo olungaphezulu http://xhr.spec.whatwg.org/
+SyncXMLHttpRequestWarning=XMLHttpRequest eyenzeka ngexesha elinye kumsonto ophambili yaliwe ngenxa yobungozi bayo kumsebenzi womsebenzisi. Ukufumana uncedo olungaphezulu http://xhr.spec.whatwg.org/
 ImplicitMetaViewportTagFallback=Akukho thegi ye-meta-viewport ifunyenweyo. Nceda ucacise gca eya kuthintela ukutshintsha kokuziphatha okungalindelekanga kushicilelo lwexesha elizayo. Ukufumana uncedo oluthe vetshe https://developer.mozilla.org/en/docs/Mozilla/Mobile/Viewport_meta_tag
 # LOCALIZATION NOTE: Do not translate "DataContainerEvent" or "CustomEvent"
 DataContainerEventWarning=Ukusetyenziswa kweDataContainerEvent kwaliwe. Sebenzisa iCustomEvent endaweni yoko.
@@ -158,54 +158,54 @@ SendAsBinaryWarning=Indlela engaqhelekanga ye-sendAsBinary yaliwe kwaye iza kusu
 # LOCALIZATION NOTE: Do not translate "window.controllers"
 Window_ControllersWarning=i-window.controllers yaliwe. Musa ukuyisebenzisa ekukhangeleni i-UA.
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Down" and "ArrowDown".
-KeyNameDownWarning=I-KeyboardEvent.key value "Down" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi- "ArrowDown". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+KeyNameDownWarning=KeyboardEvent.key value "Down" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi- "ArrowDown". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Left" and "ArrowLeft".
-KeyNameLeftWarning=I-KeyboardEvent.key value "Left" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi- "ArrowLeft".  Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+KeyNameLeftWarning=KeyboardEvent.key value "Left" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi- "ArrowLeft".  Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Right" and "ArrowRight".
-KeyNameRightWarning=I-KeyboardEvent.key value "Right" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi- "ArrowRight". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+KeyNameRightWarning=KeyboardEvent.key value "Right" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi- "ArrowRight". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Up" and "ArrowUp".
-KeyNameUpWarning=I-KeyboardEvent.key value "Up" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi-"ArrowUp". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+KeyNameUpWarning=KeyboardEvent.key value "Up" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi-"ArrowUp". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Crsel" and "CrSel".
-KeyNameCrselWarning=I-KeyboardEvent.key value "Crsel" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi-"CrSel". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+KeyNameCrselWarning=KeyboardEvent.key value "Crsel" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi-"CrSel". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Del" and "Delete".
-KeyNameDelWarning=I-KeyboardEvent.key value "Del" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi-"Delete". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+KeyNameDelWarning=KeyboardEvent.key value "Del" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi-"Delete". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Exsel" and "ExSel".
-KeyNameExselWarning=I-KeyboardEvent.key value "Exsel" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi-"ExSel". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+KeyNameExselWarning=KeyboardEvent.key value "Exsel" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi-"ExSel". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Menu" and "ContextMenu".
-KeyNameMenuWarning=I-KeyboardEvent.key value "Menu" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi-"ContextMenu". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+KeyNameMenuWarning=KeyboardEvent.key value "Menu" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi-"ContextMenu". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Esc" and "Escape".
-KeyNameEscWarning=I-KeyboardEvent.key value "Esc" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi-"Escape". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+KeyNameEscWarning=KeyboardEvent.key value "Esc" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi-"Escape". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Nonconvert" and "NonConvert".
-KeyNameNonconvertWarning=I-KeyboardEvent.key value "Nonconvert" ayisebenzi kwaye iza kuthiywa ngokutsha  ibe yi-"NonConvert". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+KeyNameNonconvertWarning=KeyboardEvent.key value "Nonconvert" ayisebenzi kwaye iza kuthiywa ngokutsha  ibe yi-"NonConvert". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "HalfWidth" and "Hankaku".
-KeyNameHalfWidthWarning=I-KeyboardEvent.key value "HalfWidth" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi-"Hankaku". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+KeyNameHalfWidthWarning=KeyboardEvent.key value "HalfWidth" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi-"Hankaku". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "RomanCharacters", "Romaji" and "Eisu".
-KeyNameRomanCharactersWarning=I-KeyboardEvent.key value "RomanCharacters" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi-"Romaji" okanye itshintshelwe kwi-"Eisu". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+KeyNameRomanCharactersWarning=KeyboardEvent.key value "RomanCharacters" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi-"Romaji" okanye itshintshelwe kwi-"Eisu". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "FullWith" and "Zenkaku".
-KeyNameFullWidthWarning=I-KeyboardEvent.key value "FullWidth" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi-"Zenkaku". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+KeyNameFullWidthWarning=KeyboardEvent.key value "FullWidth" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi-"Zenkaku". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "SelectMedia" and "MediaSelect".
-KeyNameSelectMediaWarning=I-KeyboardEvent.key value "SelectMedia" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi-"MediaSelect". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+KeyNameSelectMediaWarning=KeyboardEvent.key value "SelectMedia" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi-"MediaSelect". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "MediaNextTrack" and "MediaTrackNext".
-KeyNameMediaNextTrackWarning=I-KeyboardEvent.key value "MediaNextTrack" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi-"MediaTrackNext". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+KeyNameMediaNextTrackWarning=KeyboardEvent.key value "MediaNextTrack" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi-"MediaTrackNext". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "MediaPreviousTrack" and "MediaTrackPrevious".
-KeyNameMediaPreviousTrackWarning=I-KeyboardEvent.key value "MediaPreviousTrack" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi-"MediaTrackPrevious". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+KeyNameMediaPreviousTrackWarning=KeyboardEvent.key value "MediaPreviousTrack" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi-"MediaTrackPrevious". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Red" and "ColorF0Red".
-KeyNameRedWarning=I-KeyboardEvent.key value "Red" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi-"ColorF0Red". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+KeyNameRedWarning=KeyboardEvent.key value "Red" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi-"ColorF0Red". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Green" and "ColorF1Green".
-KeyNameGreenWarning=I-KeyboardEvent.key value "Green" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi-"ColorF1Green". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+KeyNameGreenWarning=KeyboardEvent.key value "Green" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi-"ColorF1Green". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Yellow" and "ColorF2Yellow".
-KeyNameYellowWarning=I-KeyboardEvent.key value "Yellow" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi-"ColorF2Yellow". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+KeyNameYellowWarning=KeyboardEvent.key value "Yellow" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi-"ColorF2Yellow". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Blue" and "ColorF3Blue".
-KeyNameBlueWarning=I-KeyboardEvent.key value "Blue" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi-"ColorF3Blue". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+KeyNameBlueWarning=KeyboardEvent.key value "Blue" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi-"ColorF3Blue". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Live".
-KeyNameLiveWarning=I-KeyboardEvent.key value "Live" ayisebenzi kwaye iza kushenxiswa. Fumana olunye uncedo  kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+KeyNameLiveWarning=KeyboardEvent.key value "Live" ayisebenzi kwaye iza kushenxiswa. Fumana olunye uncedo  kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Apps".
-KeyNameAppsWarning=I-KeyboardEvent.key value "Apps" ayisebenzi kwaye iza kushenxiswa. Fumana olunye uncedo  kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+KeyNameAppsWarning=KeyboardEvent.key value "Apps" ayisebenzi kwaye iza kushenxiswa. Fumana olunye uncedo  kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "FastFwd" and "MediaFastForward".
-KeyNameFastFwdWarning=I-KeyboardEvent.key value "FastFwd" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi-"MediaFastForward". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+KeyNameFastFwdWarning=KeyboardEvent.key value "FastFwd" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi-"MediaFastForward". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Zoom" and "ZoomToggle".
-KeyNameZoomWarning=I-KeyboardEvent.key value "Zoom" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi-"ZoomToggle". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+KeyNameZoomWarning=KeyboardEvent.key value "Zoom" ayisebenzi kwaye iza kuthiywa ngokutsha ibe yi-"ZoomToggle". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key" and "Dead".
-KeyNameDeadKeysWarning=I-KeyboardEvent.key values starting with "Dead" azisebenzi kwaye ziza kudityaniswa kwi-"Dead". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+KeyNameDeadKeysWarning=KeyboardEvent.key values starting with "Dead" azisebenzi kwaye ziza kudityaniswa kwi-"Dead". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 ImportXULIntoContentWarning=Ukuthunyelwa kweenowudi ze-XUL kuxwebhu lwesiqulatho kwaliwe. Le ndawo isenokushenxiswa kungekudala.
-XMLDocumentLoadPrincipalMismatch=Ukhuphelo lwamaxwebhu asuka kwezinye i-Windows aluvumelekanga. Kuvumelekile ukunxibelelana kwi-Windows apho uxwebhu belenziwe khona kuphela.khuphela kolo xwebhu. Ngcono,sebenzisa i- XMLHttpRequest endaweni yoko.
+XMLDocumentLoadPrincipalMismatch=Ukhuphelo lwamaxwebhu asuka kwezinye iifestile aluvumelekanga. Kuvumelekile ukunxibelelana kwi-Windows apho uxwebhu belenziwe khona kuphela.khuphela kolo xwebhu. Ngcono,sebenzisa XMLHttpRequest endaweni yoko.
