--- a/xh/toolkit/chrome/global-platform/win/platformKeys.properties
+++ b/xh/toolkit/chrome/global-platform/win/platformKeys.properties
@@ -7,16 +7,16 @@
 #these are used in XP menus to show keyboard shortcuts
 
 #the shift key
-VK_SHIFT=Bhekelisa
+VK_SHIFT=Shift
 
 #the command key
-VK_META=IMeta
+VK_META=Meta
 
 #the win key
-VK_WIN=Phumelela
+VK_WIN=Win
 
 #the alt key
-VK_ALT=I-Alt
+VK_ALT=Alt
 
 #the control key
 VK_CONTROL=Ctrl
