New strings for beta 1:2

--- a/da/browser/chrome/browser/loop/loop.properties
+++ b/da/browser/chrome/browser/loop/loop.properties
@@ -171,9 +171,9 @@ video_call_menu_button=Videosamtale
 # Conversation Window Strings
 
 initiate_call_button_label2=Klar til at starte din samtale?
-
+incoming_call_title2=Anmodning om samtale
 incoming_call_accept_button=Accepter
-
+incoming_call_accept_audio_only_tooltip=Accepter med lyd
 incoming_call_cancel_button=Annuller
 incoming_call_cancel_and_block_button=Annuller og bloker
 incoming_call_block_button=Bloker
@@ -195,7 +195,7 @@ call_with_contact_title=Samtale med {{contactName}}
 outgoing_call_title=Start samtale?
 initiate_audio_video_call_button2=Start
 initiate_audio_video_call_tooltip2=Start en videosamtale
-
+initiate_audio_call_button2=Stemmesamtale
 initiate_call_cancel_button=Annuller
 
 ## LOCALIZATION NOTE (call_progress_connecting_description): This is displayed
@@ -207,11 +207,12 @@ call_progress_connecting_description=Forbinder…
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#call-outgoing
 call_progress_ringing_description=Ringer…
 
-peer_ended_conversation=Modparten afsluttede samtalen
-call_has_ended=Dit opkald er afsluttet.
+peer_ended_conversation2=Personen, du ringede til, har afsluttet samtalen.
+conversation_has_ended=Din samtale er afsluttet.
+restart_call=Genoptag
 
 generic_failure_title=Noget gik galt.
-
+generic_failure_with_reason2=Du kan prøve igen eller maile et link til hvor du kan træffes senere.
 generic_failure_no_reason2=Vil du prøve igen?
 
 ## LOCALIZATION NOTE (contact_offline_title): Title for
@@ -227,7 +228,7 @@ call_timeout_notification_text=Dit opkald gik ikke igennem.
 ## These buttons are displayed when a call has failed:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
 retry_call_button=Prøv igen
-
+email_link_button=Send link som mail
 cancel_button=Annuller
 
 cannot_start_call_session_not_ready=Kan ikke foretage opkald. Sessionen er ikke klar.
@@ -268,6 +269,7 @@ feedback_window_will_close_in2=Dette vindue lukker om {{countdown}} sekund;Dette
 ## LOCALIZATION_NOTE (feedback_rejoin_button): Displayed on the feedback form after
 ## a signed-in to signed-in user call.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#feedback
+feedback_rejoin_button=Genoptag
 
 ## LOCALIZATION NOTE (feedback_report_user_button): Used to report a user in the case of
 ## an abusive user.
