--- a/da/browser/chrome/browser/devtools/scratchpad.properties
+++ b/da/browser/chrome/browser/devtools/scratchpad.properties
@@ -103,3 +103,13 @@ scratchpad.panelLabel=Kladdeblok-panel
 # tooltip of the tab when the Scratchpad is displayed inside the developer tools
 # window.
 scratchpad.tooltip=Kladdeblok
+
+# LOCALIZATION NOTE (selfxss.msg): the text that is displayed when
+# a new user of the developer tools pastes code into the console
+# %1 is the text of selfxss.okstring
+selfxss.msg=Advarsel om svindel: Pas på, når du indsætter ting, du ikke forstår. Dette kan give en angriber mulighed for at stjæle din identitet eller overtage kontrollen af din computer. Indtast '%S' i kladdeblokken nedenfor for at tillade indsætning.
+
+# LOCALIZATION NOTE (selfxss.msg): the string to be typed
+# in by a new user of the developer tools when they receive the sefxss.msg prompt.
+# Please avoid using non-keyboard characters here
+selfxss.okstring=tillad indsætning
