--- a/da/browser/chrome/browser/devtools/webide.properties
+++ b/da/browser/chrome/browser/devtools/webide.properties
@@ -10,8 +10,9 @@ projectButton_label=Åbn app
 
 mainProcess_label=Hovedproces
 
-
-
+local_runtime=Lokal runtime
+remote_runtime=Fjern-runtime
+remote_runtime_promptTitle=Fjern-runtime
 remote_runtime_promptMessage=værtsnavn:port
 
 importPackagedApp_title=Vælg mappe
@@ -24,7 +25,7 @@ notification_showTroubleShooting_accesskey=f
 # These messages appear in a notification box when an error occur.
 
 error_cantInstallNotFullyConnected=Kan ikke installere projekt. Ikke fuldt forbundet.
-
+error_cantInstallValidationErrors=Kan ikke installere projekt. Valideringsfejl.
 error_listRunningApps=Kan ikke hente app-liste fra enheden
 
 # Variable: name of the operation (in english)
@@ -61,7 +62,7 @@ runtimedetails_checkunkown=ukendt
 runtimedetails_notUSBDevice=Ikke en USB-enhed
 
 # Validation status
-
+status_tooltip=Validerings-status: %1$S
 status_valid=GYLDIG
 status_warning=ADVARSLER
 status_error=FEJL
