[fa] update from Pootle (firefox)

--- a/fa/browser/chrome/browser/sitePermissions.properties
+++ b/fa/browser/chrome/browser/sitePermissions.properties
@@ -8,8 +8,13 @@ block = باز داشتن
 alwaysAsk = هر بار پرسیده شود
 
 permission.cookie.label = ایجاد کوکی
+permission.desktop-notification.label = نمایش اعلان ها
 permission.image.label = بارگیری تصاویر
+permission.camera.label = استفاده از دوربین
+permission.microphone.label = استفاده از میکروفن
 permission.popup.label = باز کردن پنجره‌های واشو
+permission.geo.label = دسترسی به موقعیت مکانی شما\u0020
 permission.indexedDB.label = نگه‌داری اطلاعات برای استفادهٔ برون‌خط
 permission.fullscreen.label = حالت تمام صفحه
+permission.pointerLock.label = مخفی کردن اشاره‌گر موس
 
