--- a/fa/browser/chrome/browser/browser.properties
+++ b/fa/browser/chrome/browser/browser.properties
@@ -3,10 +3,10 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 nv_timeout=انقضای مدت
-openFile=باز کردن پرونده
+openFile=باز کردن فایل
 
-droponhometitle=قرار دادن صفحهٔ آغازه
-droponhomemsg=آیا می‌خواهید این نوشتار صفحهٔ آغازهٔ جدیدتان باشد؟
+droponhometitle=تنظیم صفحه‌ی خانگی
+droponhomemsg=آیا می‌خواهید این صفحه‌ی خانگی جدیدتان باشد؟
 
 # context menu strings
 
@@ -25,10 +25,10 @@ xpinstallPromptAllowButton=اجازه دادن
 # Be sure you do not choose an accesskey that is used elsewhere in the active context (e.g. main menu bar, submenu of the warning popup button)
 # See http://www.mozilla.org/access/keyboard/accesskey for details
 xpinstallPromptAllowButton.accesskey=A
-xpinstallDisabledMessageLocked=نصب نرم‌افزار توسط مدیر سیستم شما از کار انداخته شده است..
-xpinstallDisabledMessage=نصب نرم‌افزار در حال حاضر از کار انداخته شده است. برای به کار انداختن آن روی «به کار انداختن» کلیک کنید و دوباره سعی کنید.
-xpinstallDisabledButton=به کار انداختن
-xpinstallDisabledButton.accesskey=N
+xpinstallDisabledMessageLocked=مدیر سیستم شما نصب نرم‌افزار را غیرفعال کرده است.
+xpinstallDisabledMessage=نصب نرم‌افزار در حال حاضر غیرفعال است. روی «فعال‌سازی» کلیک کرده و دوباره سعی کنید.
+xpinstallDisabledButton=فعال‌سازی
+xpinstallDisabledButton.accesskey=n
 
 # LOCALIZATION NOTE (addonDownloading, addonDownloadCancelled, addonDownloadRestart):
 # Semicolon-separated list of plural forms. See:
@@ -76,13 +76,13 @@ lwthemePostInstallNotification.message=یک تم جدید نصب شده است.
 lwthemePostInstallNotification.undoButton=برگردان
 lwthemePostInstallNotification.undoButton.accesskey=U
 lwthemePostInstallNotification.manageButton=مدیریت تم‌ها…
-lwthemePostInstallNotification.manageButton.accesskey=م
+lwthemePostInstallNotification.manageButton.accesskey=M
 
 # LOCALIZATION NOTE (lwthemeNeedsRestart.message):
 # %S will be replaced with the new theme name.
 lwthemeNeedsRestart.message=%S پس از راه‌اندازی مجدد نصب خواهد شد.
 lwthemeNeedsRestart.button=هم‌اکنون راه‌اندازی مجدد شود
-lwthemeNeedsRestart.accesskey=ر
+lwthemeNeedsRestart.accesskey=R
 
 # LOCALIZATION NOTE (popupWarning.message): Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -90,19 +90,23 @@ lwthemeNeedsRestart.accesskey=ر
 popupWarningButton=گزینه‌ها
 popupWarningButton.accesskey=O
 popupWarningButtonUnix=ترجیحات
-popupWarningButtonUnix.accesskey=ت
+popupWarningButtonUnix.accesskey=P
 popupAllow=اجازه دادن به واشوها برای ‎‪%S‬
 popupBlock=بازداشتن واشوها برای ‎‪%S‬
-popupWarningDontShowFromMessage=این پیغام زمانی که واشوها بازداشته شده‌اند نشان داده نشود
-popupWarningDontShowFromLocationbar=نوار اطلاعاتی زمانی که واشوها بازداشته شده‌اند نشان داده نشود
+popupWarningDontShowFromMessage=هر بار که بالاپرها مسدود می‌شوند این پیغام را نشان نده.
+popupWarningDontShowFromLocationbar=هر بار که بالاپرها مسدود می‌شوند نوار اطلاعات را نشان نده.
 popupShowPopupPrefix=نمایش «‪%S‬»
 
 # Bad Content Blocker Doorhanger Notification
 # %S is brandShortName
-badContentBlocked.blocked.message=%S محتوای صفحه را مسدود میکند.
-badContentBlocked.notblocked.message=%S  اصلا محتوای صفحه را مسدود نمیکند.
+badContentBlocked.blocked.message=%S محتوای موجود در این صفحه را مسدود می‌کند.
+badContentBlocked.notblocked.message=%S  هیچ محتوایی را در این صفحه مسدود نمی‌کند.
 
-crashedpluginsMessage.title=متصل‌شوندهٔ %S فروپاشیده است.
+crashedpluginsMessage.title=افزونه %S از کار افتاده است.
+crashedpluginsMessage.reloadButton.label=بارگذاری مجدد صفحه
+crashedpluginsMessage.reloadButton.accesskey=ب
+crashedpluginsMessage.submitButton.label=ارسال یک گزارش از کار افتادگی
+crashedpluginsMessage.submitButton.accesskey=ا
 crashedpluginsMessage.learnMore=بیشتر بدانید…
 
 # Keyword fixup messages
@@ -110,7 +114,9 @@ crashedpluginsMessage.learnMore=بیشتر بدانید…
 # a local host page, by the time the DNS request recognizes it, we have already
 # loaded a search page for the given word.  An infobar then asks to the user
 # whether he rather wanted to visit the host.  %S is the recognized host.
-keywordURIFixup.message=آیا میخواهید به %S بروید؟
+keywordURIFixup.message=می‌خواستید به %S بروید؟
+keywordURIFixup.goTo=بله، مرا به %S ببر
+keywordURIFixup.goTo.accesskey=Y
 keywordURIFixup.dismiss=خیر، متشکرم
 keywordURIFixup.dismiss.accesskey=N
 
@@ -118,32 +124,47 @@ keywordURIFixup.dismiss.accesskey=N
 # LOCALIZATION NOTE (pluginActivateNew.message): Used for newly-installed
 # plugins which are not known to be unsafe. %1$S is the plugin name and %2$S
 # is the site domain.
-pluginActivateMultiple.message=اجازه دادن به %S برای اجرای افزونه‌ها؟
+pluginActivateNew.message=آیا%2$Sاجازه‌ی اجرای%1$S را دارد؟
+pluginActivateMultiple.message=%S اجازه دارد افزایه‌ها را اجرا کند؟
 pluginActivate.learnMore=بیشتر بدانید…
 # LOCALIZATION NOTE (pluginActivateOutdated.message, pluginActivateOutdated.label):
 # These strings are used when an unsafe plugin has an update available.
 # %1$S is the plugin name, %2$S is the domain, and %3$S is brandShortName.
+pluginActivateOutdated.message=%3$S از اجرای افزایه‌ی قدیمی %1$S روی %2$S جلوگیری کرده است.
 pluginActivateOutdated.label=افزونه قدیمی از رده خارج شده
-pluginActivate.updateLabel=به‌روزرسانی کن
+pluginActivate.updateLabel=هم‌اکنون به‌روزرسانی کن...
 # LOCALIZATION NOTE (pluginActivateVulnerable.message, pluginActivateVulnerable.label):
 # These strings are used when an unsafe plugin has no update available.
 # %1$S is the plugin name, %2$S is the domain, and %3$S is brandShortName.
+pluginActivateVulnerable.message=%3$S از اجرای افزایه‌ی ناامن %1$S روی %2$S جلوگیری کرده است.
 pluginActivateVulnerable.label=افزونۀ آسیب‌پذیر!
+pluginActivate.riskLabel=خطر چیست؟
 # LOCALIZATION NOTE (pluginActivateBlocked.message): %1$S is the plugin name, %2$S is brandShortName
+pluginActivateBlocked.message=%2$S برای محافظت از شما "%1$S" را مسدود کرده است.
+pluginActivateBlocked.label=برای محافظت از شما مسدود شده است.
 pluginActivateDisabled.message="%S" غیرفعال شده است.
-pluginActivateDisabled.label=غیر فعال
+pluginActivateDisabled.label=غیرفعال
 pluginActivateDisabled.manage=مدیریت افزونه‌ها...
+pluginEnabled.message=%Sبر روی %S فعال است‌‍‌‬‌
+pluginEnabledOutdated.message=افزایه‌ی قدیمی "%S" روی %S فعال است.
 pluginInfo.unknownPlugin=نامعلوم
 
 # LOCALIZATION NOTE (pluginActivateNow.label, pluginActivateAlways.label, pluginBlockNow.label): These should be the same as the matching strings in browser.dtd
 # LOCALIZATION NOTE (pluginActivateNow.label): This button will enable the
 # plugin in the current session for an short time (about an hour), auto-renewed
 # if the site keeps using the plugin.
+pluginActivateNow.label=این بار اجازه بده
+pluginActivateNow.accesskey=ا
 # LOCALIZATION NOTE (pluginActivateAlways.label): This button will enable the
 # plugin for a long while (90 days), auto-renewed if the site keeps using the
 # plugin.
+pluginBlockNow.label=مسدود کردن افزونه
+pluginBlockNow.accesskey=م
+pluginContinue.label=همچنان اجازه بده
+pluginContinue.accesskey=ه
 
 # in-page UI
+PluginClickToActivate=فعال سازی %S.
 PluginVulnerableUpdatable=این افزودنی آسیب‌پذیر است و باید به‌روز رسانی شود.
 PluginVulnerableNoUpdate=این افزودنی دارای مشکل امنیتی است.
 
@@ -151,14 +172,14 @@ PluginVulnerableNoUpdate=این افزودنی دارای مشکل امنیتی 
 # LOCALIZATION NOTE (pluginActivateTrigger): Use the unicode ellipsis char, \u2026,
 # or use "..." if \u2026 doesn't suit traditions in your locale.
 pluginActivateTrigger.label=اجازه دادن
-pluginActivateTrigger.accesskey=A
+pluginActivateTrigger.accesskey=ا
 
 # Sanitize
 # LOCALIZATION NOTE (sanitizeDialog2.everything.title): When "Time range to
 # clear" is set to "Everything", the Clear Recent History dialog's title is
 # changed to this.  See UI mockup and comment 11 at bug 480169 -->
 sanitizeDialog2.everything.title=پاک‌سازی تمام تاریخچه
-sanitizeButtonOK=پاک‌سازی
+sanitizeButtonOK=همین حالا پاک‌سازی کن
 # LOCALIZATION NOTE (sanitizeButtonClearing): The label for the default
 # button between the user clicking it and the window closing.  Indicates the
 # items are being cleared.
@@ -170,33 +191,33 @@ sanitizeEverythingWarning2=تمام تاریخچه پاک خواهد شد.
 # LOCALIZATION NOTE (sanitizeSelectedWarning): Warning that appears when
 # "Time range to clear" is set to "Everything" in Clear Recent History dialog,
 # provided that the user has modified the default set of history items to clear.
-sanitizeSelectedWarning=تمام موارد انتخاب شده پاک خواهند شد.
+sanitizeSelectedWarning=همه‌ی موارد انتخاب‌شده پاک خواهند شد.
 
 # LOCALIZATION NOTE (downloadAndInstallButton.label): %S is replaced by the
 # version of the update: "Update to 28.0".
-update.downloadAndInstallButton.label=به‌هنگام‌سازی %S
-update.downloadAndInstallButton.accesskey=U
+update.downloadAndInstallButton.label=به‌روزرسانی به %S
+update.downloadAndInstallButton.accesskey=ب
 
 # RSS Pretty Print
 feedShowFeedNew=آبونه شدن «%S»…
 
-menuOpenAllInTabs.label=باز کردن همه در زبانه‌های خاص خود
+menuOpenAllInTabs.label=همه را در زبانه‌های جدا باز کن
 
 # History menu
 menuRestoreAllTabs.label=برگرداندن همه در زبانه‌های خاص خود
 # LOCALIZATION NOTE (menuRestoreAllTabsSubview.label): like menuRestoreAllTabs.label,
 # but used in the history subview in the panel UI, so needs to mention these are *closed* tabs.
-menuRestoreAllTabsSubview.label=برگرداندن پنجره‌های بسته شده
+menuRestoreAllTabsSubview.label=بازگرداندن زبانه‌های بسته شده
 # LOCALIZATION NOTE (menuRestoreAllWindows, menuUndoCloseWindowLabel, menuUndoCloseWindowSingleTabLabel):
 # see bug 394759
 menuRestoreAllWindows.label=برگرداندن همهٔ پنجره‌ها
 # LOCALIZATION NOTE (menuRestoreAllWindowsSubview.label): like menuRestoreAllWindows.label,
 # but used in the history subview in the panel UI, so needs to mention these are *closed* windows.
-menuRestoreAllWindowsSubview.label=برگرداندن همهٔ پنجره‌ها
+menuRestoreAllWindowsSubview.label=بازگرداندن  پنجره‌های بسته‌شده
 # LOCALIZATION NOTE (menuUndoCloseWindowLabel): Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 Window Title, #2 Number of tabs
-menuUndoCloseWindowLabel=#1 (و #2 زبانهٔ دیگر)
+menuUndoCloseWindowLabel=#1 (و #2 زبانه‌ی دیگر)؛ #1 (و #2 زبانه‌ی دیگر)
 menuUndoCloseWindowSingleTabLabel=#1
 
 # Unified Back-/Forward Popup
@@ -217,6 +238,8 @@ refreshBlocked.redirectLabel=%S این صفحه را از تغییر مسیر خ
 # LOCALIZATION NOTE (bookmarksMenuButton.tooltip):
 # %S is the keyboard shortcut for "Show All Bookmarks"
 # Star button
+starButtonOn.tooltip2=ویرایش این نشانک(%S)
+starButtonOff.tooltip2=نشانک‌گذاری این صفحه(%S)
 starButtonOverflowed.label=نشانک‌گذاری این صفحه
 starButtonOverflowedStarred.label=ویرایش این نشانک
 
@@ -263,16 +286,19 @@ identity.identified.verifier=تأیید شده توسط: %S
 identity.identified.verified_by_you=شما برای این وب‌گاه یک استثناء امنیتی ذخیره کرده‌اید.
 identity.identified.state_and_country=%S، %S
 
+identity.encrypted2=اتصال شما به این سایت امن است.
 identity.unencrypted=اتصال شما به این وب‌گاه رمزنگاری نشده است.
 
 identity.unknown.tooltip=این پایگاه وبی از هویت خود اطلاعاتی فراهم نمی‌کند.
 
 # LOCALIZATION NOTE (identity.chrome): %S is replaced with the brandShortName.
+identity.chrome=این یک صفحه %S امن است.
 
 # Edit Bookmark UI
 editBookmarkPanel.pageBookmarkedTitle=صفحه نشانک‌گذاری شد
 editBookmarkPanel.pageBookmarkedDescription=%S همیشه این صفحه را برای شما به یاد خواهد داشت.
 editBookmarkPanel.bookmarkedRemovedTitle=نشانک حذف گردید
+editBookmarkPanel.editBookmarkTitle=ویرایش این نشانک
 
 # LOCALIZATION NOTE (editBookmark.removeBookmarks.label): Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -282,6 +308,8 @@ editBookmarkPanel.bookmarkedRemovedTitle=نشانک حذف گردید
 editBookmark.removeBookmarks.label=حذف #1 نشانک
 
 # Post Update Notifications
+pu.notifyButton.label=جزئیات…
+pu.notifyButton.accesskey=ج
 # LOCALIZATION NOTE %S will be replaced by the short name of the application.
 puNotifyText=%S به‌هنگام شده است
 puAlertTitle=%S به‌هنگام گردید
@@ -300,6 +328,8 @@ geolocation.neverShareLocation.accesskey=N
 geolocation.shareWithSite=آیا مایلید مکان خود را با %S به اشتراک بگذارید؟
 geolocation.shareWithFile=آیا مایلید مکان خود را با پروندۀ %S به اشتراک بگذارید؟
 
+webNotifications.showForSession=نمایش یرای این نشست
+webNotifications.showForSession.accesskey=s
 webNotifications.alwaysShow.accesskey=A
 webNotifications.neverShow.accesskey=N
 
@@ -307,6 +337,7 @@ webNotifications.neverShow.accesskey=N
 
 pointerLock.allow2.accesskey=H
 pointerLock.alwaysAllow.accesskey=A
+pointerLock.neverAllow.accesskey=N
 
 # Phishing/Malware Notification Bar.
 # LOCALIZATION NOTE (notAForgery, notAnAttack)
@@ -392,14 +423,19 @@ fullscreen.entered=%S تمام صفحه است.
 fullscreen.rememberDecision=انتخاب من را برای %S به خاطر بسپار
 
 # LOCALIZATION NOTE (fullscreenButton.tooltip): %S is the keyboard shortcut for full screen
+fullscreenButton.tooltip=نمایش پنجره در حالت تمام‌صفحه (%S)
 
 service.toolbarbutton.label=خدمات
 service.toolbarbutton.tooltiptext=خدمات
 
 # LOCALIZATION NOTE (social.install.description): %1$S is the hostname of the social provider, %2$S is brandShortName (e.g. Firefox)
+service.install.ok.label=فعال کردن سرویسها
+service.install.ok.accesskey=ف
 
 # LOCALIZATION NOTE (social.markpageMenu.label): %S is the name of the social provider
+social.markpageMenu.label=ذخیره صفحه در%S
 # LOCALIZATION NOTE (social.marklinkMenu.label): %S is the name of the social provider
+social.marklinkMenu.label=ذخیره پیوند به %S
 
 # LOCALIZATION NOTE (social.error.message): %1$S is brandShortName (e.g. Firefox), %2$S is the name of the social provider
 social.error.message=در حال حاضر %1$S نمی‌تواند به %2$S وصل شود.
@@ -415,9 +451,13 @@ identity.chooseIdentity.label = استفاده از پست الکترونیکی 
 identity.newIdentity.email.placeholder = پست الکترونیکی
 # LOCALIZATION NOTE (identity.newIdentity.description): %S is the website origin (e.g. https://www.mozilla.org) shown in popup notifications.
 identity.newIdentity.description = آدرس پست الکترونیکی‌تان را وارد کنید برای ورود به %S
+identity.next.label = بعدی‌
+identity.next.accessKey = ب
 # LOCALIZATION NOTE: shown in the popup notification when a user successfully logs into a website
 # LOCALIZATION NOTE (identity.loggedIn.description): %S is the user's identity (e.g. user@example.com)
 identity.loggedIn.description = وارد شده به عنوان : %S
+identity.loggedIn.signOut.label = بیرون رفتن
+identity.loggedIn.signOut.accessKey = ر
 
 # LOCALIZATION NOTE (getUserMedia.shareCamera.message, getUserMedia.shareMicrophone.message,
 #                    getUserMedia.shareScreen.message, getUserMedia.shareCameraAndMicrophone.message,
@@ -425,7 +465,9 @@ identity.loggedIn.description = وارد شده به عنوان : %S
 #  %S is the website origin (e.g. www.mozilla.org)
 getUserMedia.shareCamera.message = آیا مایلید که دوربین‌تان را با %S به اشتراک بگذاربد؟
 getUserMedia.shareMicrophone.message = آیا مایلید که میکروفون‌تان را با %S به اشتراک بگذاربد؟
+getUserMedia.shareScreen.message = آیا مایلید که صفحه‌ تصویرتان را با %S به اشتراک بگذارید؟
 getUserMedia.shareCameraAndMicrophone.message = آیا می‌خواهید دوربین و میکروفون خود را با %S به اشتراک بگذارید؟
+getUserMedia.shareScreenAndMicrophone.message = آیا مایلید که میکروفون‌ و صفحه‌ تصویرتان را با %S به اشتراک بگذارید؟
 # LOCALIZATION NOTE (getUserMedia.shareApplicationWindowCount.label):
 # Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
