[xh] update from Pootle (firefox)

--- a/xh/browser/chrome/browser/browser.properties
+++ b/xh/browser/chrome/browser/browser.properties
@@ -611,3 +611,5 @@ customizeTips.tip0.learnMore = Funda okungakumbi
 # %S is brandShortName
 appmenu.restartNeeded.description = Qalela %S ukusebenzisa izihlaziyi
 appmenu.updateFailed.description = Uhlaziyo lwendawo engemva aluphumelelanga, nceda ukhuphele uhlaziyo
+appmenu.restartBrowserButton.label = Qalisa kwakhona %S
+appmenu.downloadUpdateButton.label = Khuphela Uhlaziyo
