--- a/xh/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/xh/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -98,7 +98,10 @@ quit-button.tooltiptext.linux2 = Yeka %1$S (%2$S)
 quit-button.tooltiptext.mac = Yeka %1$S (%2$S)
 
 loop-call-button2.label = Qala incoko
+loop-call-button2.tooltiptext = Qala incoko
 
+social-share-button.label = Yabelana Ngeli Phephai
+social-share-button.tooltiptext = Yabelana Ngeli Phepha
 
 panic-button.label = Ulibele
 panic-button.tooltiptext = Ulibele imbali ethile yokubhrawuza
@@ -108,4 +111,5 @@ web-apps-button.tooltiptext = Fumana ii-Apps
 
 # LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
 # widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
+devtools-webide-button.label = I-WebIDE
 devtools-webide-button.tooltiptext = Vula i-WebIDE
