--- a/xh/browser/chrome/browser/loop/loop.properties
+++ b/xh/browser/chrome/browser/loop/loop.properties
@@ -11,6 +11,7 @@ clientShortname2=Molo Firefox
 ## LOCALIZATION_NOTE(first_time_experience.title): clientShortname will be
 ## replaced by the brand name
 first_time_experience_title={{clientShortname}} — Joyina incoko
+first_time_experience_button_label=Qalisa
 
 share_link_header_text=Yabelana ngeli khonkco ukumema umntu ukuba athethe:
 invite_header_text=Mema omnye umntu akujiyine.
@@ -66,6 +67,7 @@ share_email_subject4={{clientShortname}} — Joyina incoko
 ## part between {{..}} and leave the \r\n\r\n part alone
 share_email_body4=Molo! \n \n Ndijoyina kwincoko yevidiyo usebenzisa {{clientShortname}}: \n \n Awunalo ukhuphelo okanye fakela nantoni na. Kopa nje uncamathisele le URL kwibhrawza yakho:  \n \n {{callUrl}} \n \n Ukuba uyafuna, ungafunda ngakumbi malunga {{clientShortname}} ku {{learnMoreUrl}} \n \n Ndiza kuthetha nawe kwakamsinya!
 share_button=Imeyili
+share_button2=Ikhonkco le-Imeyili
 copy_url_button=Kopa
 copy_url_button2=Kopa ikhonkco
 copied_url_button=Ikopiwe
@@ -97,6 +99,7 @@ new_contact_name_placeholder=Igama
 new_contact_email_placeholder=Imeyili
 new_contact_phone_placeholder=Firefox OS Phone
 
+contacts_blocked_contacts=Abaqhagamshelwa abaThintelweyo
 
 ## LOCALIZATION NOTE (add_contact_button):
 ## This is the button to actually add the new contact
@@ -187,6 +190,7 @@ initiate_call_button_label2=Ukulungele ukuqala incoko yakho?
 incoming_call_title2=Isicelo sencoko
 incoming_call_accept_button=Yamkela
 incoming_call_accept_audio_only_tooltip=Yamkela ngelizwi
+incoming_call_accept_audio_video_tooltip=Yamkela ngevidiyo
 incoming_call_cancel_button=Rhoxisa
 incoming_call_cancel_and_block_button=Rhoxisa uthintele
 incoming_call_block_button=Thintela
@@ -241,6 +245,7 @@ call_timeout_notification_text=I-kholi yakho khange iphumele.
 ## These buttons are displayed when a call has failed:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
 retry_call_button=Phinda uzame
+email_link_button=Ikhonkco le-imeyili
 cancel_button=Rhoxisa
 
 cannot_start_call_session_not_ready=Awunakuqaliswa umnxeba, iseshoni ayikalungi.
@@ -310,3 +315,4 @@ rooms_room_full_label=Sele kukho abantu ababini kule ncoko.
 rooms_room_full_call_to_action_nonFx_label=Khuphela {{brandShortname}} ukuqalisa eyakho
 rooms_room_full_call_to_action_label=Funda ngakumbi malunga {{clientShortname}} »
 rooms_room_joined_label=Umntu othile ujoyine incoko!
+rooms_room_join_label=Incoko yelizwi
