--- a/xh/toolkit/chrome/global/charsetMenu.properties
+++ b/xh/toolkit/chrome/global/charsetMenu.properties
@@ -64,6 +64,7 @@ ISO-8859-2.key   =       l
 ISO-8859-2       = IsiYurophu eseMbindini (ISO)
 
 # Chinese, Simplified
+gbk.bis.key      =          S
 gbk.bis          = IsiTshayina Esenziwe Lula
 
 # Chinese, Traditional
