New strings for beta 2:2

--- a/da/browser/chrome/browser/devtools/storage.properties
+++ b/da/browser/chrome/browser/devtools/storage.properties
@@ -24,7 +24,7 @@ storage.label=Lager
 # LOCALIZATION NOTE (storage.menuLabel):
 # This string is displayed in the Tools menu as a shortcut to open the devtools
 # with the Storage Inspector tab selected.
-storage.menuLabel=Lager-insepktør
+storage.menuLabel=Lager-inspektør
 
 # LOCALIZATION NOTE (storage.panelLabel):
 # This string is used as the aria-label for the iframe of the Storage Inspector
@@ -34,7 +34,7 @@ storage.panelLabel=Lager-panel
 # LOCALIZATION NOTE (storage.tooltip):
 # This string is displayed in the tooltip of the tab when the storage editor is
 # displayed inside the developer tools window.
-storage.tooltip2=Lager-insepktør (Cookies, lokalt lager …)
+storage.tooltip2=Lager-inspektør (Cookies, lokalt lager …)
 
 # LOCALIZATION NOTE (tree.emptyText):
 # This string is displayed when the Storage Tree is empty. This can happen when
@@ -50,7 +50,7 @@ table.emptyText=Der er ingen data for den valgte vært
 # These strings are the labels for Storage type groups present in the Storage
 # Tree, like cookies, local storage etc.
 tree.labels.cookies=Cookies
-tree.labels.localStorage=Localt lager
+tree.labels.localStorage=Lokalt lager
 tree.labels.sessionStorage=Session-lager
 tree.labels.indexedDB=Indekseret DB
 
