[en-GB] update from Pootle (mobile)

--- a/en-CA/mobile/android/chrome/browser.properties
+++ b/en-CA/mobile/android/chrome/browser.properties
@@ -190,7 +190,7 @@ offlineApps.storeOfflineData=Store Offline Data
 indexedDBQuota.wantsTo=%S wants to store a lot of data on your device for offline use.
 
 # LOCALIZATION NOTE (password.savePassword): Label that will be used in
-# site settings dialog.
+ # site settings dialog.
 password.savePassword=Save Password
 # LOCALIZATION NOTE (password.save): This should match
 # saveButton in passwordmgr.properties
@@ -322,6 +322,8 @@ remoteNotificationGenericName=App
 # LOCALIZATION NOTE (remoteNotificationMessage): %S is the port on which
 # the remote debugger server is listening.
 remoteNotificationMessage=Listening on port %S
+# LOCALIZATION NOTE (remoteStartNotificationTitle): %S is the name of the app.
+# LOCALIZATION NOTE (remoteStartNotificationMessage):
 
 # Helper apps
 helperapps.open=Open
