--- a/en-GB/mobile/overrides/passwordmgr.properties
+++ b/en-GB/mobile/overrides/passwordmgr.properties
@@ -16,10 +16,10 @@ updatePasswordNoUser=Update saved password for this login?
 updateButton=Update
 dontUpdateButton=Don't update
 
-userSelectText = Please confirm which user you are changing the password for
-passwordChangeTitle = Confirm Password Change
+userSelectText=Please confirm which user you are changing the password for
+passwordChangeTitle=Confirm Password Change
 
 # Strings used by PromptService.js
-rememberPassword = Use Password Manager to remember this password.
+rememberPassword=Use Password Manager to remember this password.
 username=Username
 password=Password
